--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
-Svatba
+<!DOCTYPE html>
+<html lang="cs">
+<head>
+	<title>Petra Kadlecová &amp; Jan Kaláb</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<style type="text/css">
+		body {
+			padding-top: 60px;
+			padding-bottom: 40px;
+		}
+		p {text-align: justify}
+	</style>
+	<link href="css/bootstrap-responsive.min.css" rel="stylesheet">
+</head>
+<body data-spy="scroll" data-target=".navbar">
+	<div class="navbar navbar-fixed-top">
+		<div class="navbar-inner">
+			<div class="container">
+				<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="brand" href="#">Petra &amp; Honza</a>
+				<div class="nav-collapse">
+					<ul class="nav">
+						<li><a href="#svatba"><i class="icon-bell"></i> Svatba</a></li>
+						<li><a href="#kdyakde"><i class="icon-calendar"></i> Kdy a kde</a></li>
+						<li><a href="#hostina"><i class="icon-glass"></i> Hostina</a></li>
+						<li><a href="#dary"><i class="icon-gift"></i> Dary</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="container">
+		<div class="hero-unit" id="hero-unit">
+			<img src="http://farm9.staticflickr.com/8003/7465044124_b1c24ecf8f_q_d.jpg" class="pull-right img-circle">
+			<h1>Petra Kadlecová &amp; Jan Kaláb</h1>
+			<p>10. 11. 2012,<br/>
+			Kostel sv. Cyrila a Metoděje, Brno &ndash; Židenice</p>
+		</div>
+		<section id="svatba">
+			<div class="page-header"><h2>Svatba</h2></div>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque tempor urna vitae congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec rutrum odio dictum lorem tincidunt tempus eleifend quam tincidunt. In at mauris dolor. Ut dapibus molestie varius. Morbi posuere, mauris ut congue cursus, nulla augue ultrices lorem, non ultrices neque tortor sed ligula. Suspendisse eu ipsum felis, at laoreet erat. Suspendisse quis lorem mauris. Vivamus vel dapibus lacus. Mauris sed convallis felis. Integer tellus neque, venenatis eget convallis sit amet, vulputate ac augue. Sed dui ante, pharetra sit amet condimentum at, congue eu tortor. Nullam non suscipit tellus. Mauris sollicitudin turpis porttitor dolor laoreet consectetur.</p>
+		</section>
+		<section id="kdyakde">
+			<div class="page-header"><h2>Kdy a kde</h2></div>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque tempor urna vitae congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec rutrum odio dictum lorem tincidunt tempus eleifend quam tincidunt. In at mauris dolor. Ut dapibus molestie varius. Morbi posuere, mauris ut congue cursus, nulla augue ultrices lorem, non ultrices neque tortor sed ligula. Suspendisse eu ipsum felis, at laoreet erat. Suspendisse quis lorem mauris. Vivamus vel dapibus lacus. Mauris sed convallis felis. Integer tellus neque, venenatis eget convallis sit amet, vulputate ac augue. Sed dui ante, pharetra sit amet condimentum at, congue eu tortor. Nullam non suscipit tellus. Mauris sollicitudin turpis porttitor dolor laoreet consectetur.</p>
+		</section>
+		<section id="hostina">
+			<div class="page-header"><h2>Hostina</h2></div>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque tempor urna vitae congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec rutrum odio dictum lorem tincidunt tempus eleifend quam tincidunt. In at mauris dolor. Ut dapibus molestie varius. Morbi posuere, mauris ut congue cursus, nulla augue ultrices lorem, non ultrices neque tortor sed ligula. Suspendisse eu ipsum felis, at laoreet erat. Suspendisse quis lorem mauris. Vivamus vel dapibus lacus. Mauris sed convallis felis. Integer tellus neque, venenatis eget convallis sit amet, vulputate ac augue. Sed dui ante, pharetra sit amet condimentum at, congue eu tortor. Nullam non suscipit tellus. Mauris sollicitudin turpis porttitor dolor laoreet consectetur.</p>
+		</section>
+		<section id="dary">
+			<div class="page-header"><h2>Dary</h2></div>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque tempor urna vitae congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec rutrum odio dictum lorem tincidunt tempus eleifend quam tincidunt. In at mauris dolor. Ut dapibus molestie varius. Morbi posuere, mauris ut congue cursus, nulla augue ultrices lorem, non ultrices neque tortor sed ligula. Suspendisse eu ipsum felis, at laoreet erat. Suspendisse quis lorem mauris. Vivamus vel dapibus lacus. Mauris sed convallis felis. Integer tellus neque, venenatis eget convallis sit amet, vulputate ac augue. Sed dui ante, pharetra sit amet condimentum at, congue eu tortor. Nullam non suscipit tellus. Mauris sollicitudin turpis porttitor dolor laoreet consectetur.</p>
+		</section>
+	</div>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+</body>
+</html>
