--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 		</div>
 	</div>
 	<div class="container">
+		<div class="alert">Stránka ještě není kompletní!</div>
 		<div class="hero-unit" id="hero-unit">
 			<img src="http://farm9.staticflickr.com/8003/7465044124_b1c24ecf8f_q_d.jpg" class="pull-right img-circle">
 			<h1>Petra Kadlecová &amp; Jan Kaláb</h1>
