--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<img src="http://farm9.staticflickr.com/8003/7465044124_b1c24ecf8f_q_d.jpg" class="pull-right img-circle">
 			<h1>Petra Kadlecová &amp; Jan Kaláb</h1>
 			<p>10. 11. 2012,<br/>
-			Kostel sv. Cyrila a Metoděje, Brno &ndash; Židenice</p>
+			Kostel sv. Cyrila a Metoděje, Brno-Židenice</p>
 		</div>
 		<section id="svatba">
 			<div class="page-header"><h2>Svatba</h2></div>
