--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 	<title>Petra Kadlecová &amp; Jan Kaláb</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<!--[if lt IE 9]>
+		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<style type="text/css">
 		body {
@@ -39,7 +43,7 @@
 	<div class="container">
 		<div class="alert">Stránka ještě není kompletní!</div>
 		<div class="hero-unit" id="hero-unit">
-			<img src="http://farm9.staticflickr.com/8003/7465044124_b1c24ecf8f_q_d.jpg" class="pull-right img-circle">
+			<img src="http://farm9.staticflickr.com/8003/7465044124_b1c24ecf8f_q_d.jpg" class="pull-right img-circle" alt="Fotka">
 			<h1>Petra Kadlecová &amp; Jan Kaláb</h1>
 			<p>10. 11. 2012,<br/>
 			Kostel sv. Cyrila a Metoděje, Brno-Židenice</p>
@@ -65,7 +69,7 @@
 			<ul>
 				<li><a href="https://www.dropbox.com/s/rlmf5uglcy0picu/zasnoubeni.zip" rel="tooltip" title="Karta, se kterou byla Petra požádána o ruku">Zasnoubení</a></li>
 				<li><a href="https://www.dropbox.com/s/rlmf5uglcy0picu/zasnoubeni.zip" rel="tooltip" title="Svatební oznámení">Oznámení</a></li>
-			</dl>
+			</ul>
 		</section>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
