--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			padding-bottom: 40px;
 		}
 		p {text-align: justify}
+		.img-polaroid.pull-right {margin-left: 10px;}
 	</style>
 	<link href="css/bootstrap-responsive.min.css" rel="stylesheet">
 </head>
@@ -43,13 +44,29 @@
 	<div class="container">
 		<div class="alert">Stránka ještě není kompletní!</div>
 		<div class="hero-unit" id="hero-unit">
-			<img src="http://farm9.staticflickr.com/8003/7465044124_b1c24ecf8f_q_d.jpg" class="pull-right img-circle" alt="Fotka">
-			<h1>Petra Kadlecová &amp; Jan Kaláb</h1>
-			<p>10. 11. 2012,<br/>
-			Kostel sv. Cyrila a Metoděje, Brno-Židenice</p>
+			<img src="http://farm9.staticflickr.com/8003/7465044124_b1c24ecf8f_q_d.jpg" class="pull-right img-circle hidden-phone" alt="Fotka">
+			<h1>Pe&shy;tra Ka&shy;dle&shy;co&shy;vá &amp; Jan Ka&shy;láb</h1>
+			<h2>10. 11. 2012</h2>
+			<p><a href="http://zidenice.farnost.cz">Kostel sv. Cyrila a Metoděje</a>, <a href="http://www.delnickydumbrno.cz">Dělnický dům</a></p>
+		</div>
+		<div class="row">
+			<div class="span6">
+				<img src="http://farm7.staticflickr.com/6084/6115492383_7cfa9c117d_q_d.jpg" class="pull-right img-polaroid" alt="Petra Kadlecová">
+				<h2>Petra Kadlecová</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque tempor urna vitae congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec rutrum odio dictum lorem tincidunt tempus eleifend quam tincidunt. In at mauris dolor. Ut dapibus molestie varius. Morbi posuere, mauris ut congue cursus, nulla augue ultrices lorem, non ultrices neque tortor sed ligula. Suspendisse eu ipsum felis, at laoreet erat. Suspendisse quis lorem mauris. Vivamus vel dapibus lacus. Mauris sed convallis felis. Integer tellus neque, venenatis eget convallis sit amet, vulputate ac augue. Sed dui ante, pharetra sit amet condimentum at, congue eu tortor. Nullam non suscipit tellus. Mauris sollicitudin turpis porttitor dolor laoreet consectetur.</p>
+			</div>
+			<div class="span6">
+				<img src="http://farm3.staticflickr.com/2301/2037223886_6b57b8c832_q_d.jpg" class="pull-right img-polaroid" alt="Jan Kaláb">
+				<h2>Jan Kaláb</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque tempor urna vitae congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec rutrum odio dictum lorem tincidunt tempus eleifend quam tincidunt. In at mauris dolor. Ut dapibus molestie varius. Morbi posuere, mauris ut congue cursus, nulla augue ultrices lorem, non ultrices neque tortor sed ligula. Suspendisse eu ipsum felis, at laoreet erat. Suspendisse quis lorem mauris. Vivamus vel dapibus lacus. Mauris sed convallis felis. Integer tellus neque, venenatis eget convallis sit amet, vulputate ac augue. Sed dui ante, pharetra sit amet condimentum at, congue eu tortor. Nullam non suscipit tellus. Mauris sollicitudin turpis porttitor dolor laoreet consectetur.</p>
+			</div>
 		</div>
 		<section id="svatba">
 			<div class="page-header"><h2>Svatba</h2></div>
+			<blockquote class="pull-right" style="padding-left: 15px">
+				<p><i>Čím víc jí dávám, tím víc jí mám.</i></p>
+				<small>William Shakespeare, <cite title="Romeo a Julie">Romeo a Julie</cite></small>
+			</blockquote>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque tempor urna vitae congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec rutrum odio dictum lorem tincidunt tempus eleifend quam tincidunt. In at mauris dolor. Ut dapibus molestie varius. Morbi posuere, mauris ut congue cursus, nulla augue ultrices lorem, non ultrices neque tortor sed ligula. Suspendisse eu ipsum felis, at laoreet erat. Suspendisse quis lorem mauris. Vivamus vel dapibus lacus. Mauris sed convallis felis. Integer tellus neque, venenatis eget convallis sit amet, vulputate ac augue. Sed dui ante, pharetra sit amet condimentum at, congue eu tortor. Nullam non suscipit tellus. Mauris sollicitudin turpis porttitor dolor laoreet consectetur.</p>
 		</section>
 		<section id="kdyakde">
@@ -67,7 +84,7 @@
 		<section id="download">
 			<div class="page-header"><h2>Ke stažení</h2></div>
 			<ul>
-				<li><a href="https://www.dropbox.com/s/rlmf5uglcy0picu/zasnoubeni.zip" rel="tooltip" title="Karta, se kterou byla Petra požádána o ruku">Zasnoubení</a></li>
+				<li><a href="https://www.dropbox.com/s/rlmf5uglcy0picu/zasnoubeni.zip" rel="tooltip" title="Karta, se kterou byla Petra požádána o&nbsp;ruku">Zasnoubení</a></li>
 				<li><a href="https://www.dropbox.com/s/rlmf5uglcy0picu/zasnoubeni.zip" rel="tooltip" title="Svatební oznámení">Oznámení</a></li>
 			</ul>
 		</section>
