--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<div class="alert">Stránka ještě není kompletní!</div>
 		<div class="hero-unit" id="hero-unit">
 			<img src="http://farm9.staticflickr.com/8003/7465044124_b1c24ecf8f_q_d.jpg" class="pull-right img-circle hidden-phone" alt="Fotka">
-			<h1>Pe&shy;tra Ka&shy;dle&shy;co&shy;vá &amp; Jan Ka&shy;láb</h1>
+			<h1>Pet&shy;ra Kad&shy;le&shy;co&shy;vá &amp; Jan Ka&shy;láb</h1>
 			<h2>10. 11. 2012</h2>
 			<p><a href="http://zidenice.farnost.cz">Kostel sv. Cyrila a Metoděje</a>, <a href="http://www.delnickydumbrno.cz">Dělnický dům</a></p>
 		</div>
