--- a/index.html
+++ b/index.html
@@ -42,44 +42,105 @@
 		</div>
 	</div>
 	<div class="container">
-		<div class="alert">Stránka ještě není kompletní!</div>
+		<div class="alert">Stránka ještě není kompletní! Jděte jinam! ಠ_ಠ</div>
 		<div class="hero-unit" id="hero-unit">
 			<img src="http://farm9.staticflickr.com/8003/7465044124_b1c24ecf8f_q_d.jpg" class="pull-right img-circle hidden-phone" alt="Fotka">
 			<h1>Pet&shy;ra Kad&shy;le&shy;co&shy;vá &amp; Jan Ka&shy;láb</h1>
 			<h2>10. 11. 2012</h2>
-			<p><a href="http://zidenice.farnost.cz">Kostel sv. Cyrila a Metoděje</a>, <a href="http://www.delnickydumbrno.cz">Dělnický dům</a></p>
-		</div>
-		<div class="row">
-			<div class="span6">
-				<img src="http://farm7.staticflickr.com/6084/6115492383_7cfa9c117d_q_d.jpg" class="pull-right img-polaroid" alt="Petra Kadlecová">
-				<h2>Petra Kadlecová</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque tempor urna vitae congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec rutrum odio dictum lorem tincidunt tempus eleifend quam tincidunt. In at mauris dolor. Ut dapibus molestie varius. Morbi posuere, mauris ut congue cursus, nulla augue ultrices lorem, non ultrices neque tortor sed ligula. Suspendisse eu ipsum felis, at laoreet erat. Suspendisse quis lorem mauris. Vivamus vel dapibus lacus. Mauris sed convallis felis. Integer tellus neque, venenatis eget convallis sit amet, vulputate ac augue. Sed dui ante, pharetra sit amet condimentum at, congue eu tortor. Nullam non suscipit tellus. Mauris sollicitudin turpis porttitor dolor laoreet consectetur.</p>
-			</div>
-			<div class="span6">
-				<img src="http://farm3.staticflickr.com/2301/2037223886_6b57b8c832_q_d.jpg" class="pull-right img-polaroid" alt="Jan Kaláb">
-				<h2>Jan Kaláb</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque tempor urna vitae congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec rutrum odio dictum lorem tincidunt tempus eleifend quam tincidunt. In at mauris dolor. Ut dapibus molestie varius. Morbi posuere, mauris ut congue cursus, nulla augue ultrices lorem, non ultrices neque tortor sed ligula. Suspendisse eu ipsum felis, at laoreet erat. Suspendisse quis lorem mauris. Vivamus vel dapibus lacus. Mauris sed convallis felis. Integer tellus neque, venenatis eget convallis sit amet, vulputate ac augue. Sed dui ante, pharetra sit amet condimentum at, congue eu tortor. Nullam non suscipit tellus. Mauris sollicitudin turpis porttitor dolor laoreet consectetur.</p>
-			</div>
+			<p><a href="http://zidenice.farnost.cz">Kostel sv. Cyrila a Metoděje</a>, <a href="http://www.delnickydumbrno.cz">Dělnický dům Židenice</a></p>
 		</div>
 		<section id="svatba">
 			<div class="page-header"><h2>Svatba</h2></div>
-			<blockquote class="pull-right" style="padding-left: 15px">
+			<blockquote>
 				<p><i>Čím víc jí dávám, tím víc jí mám.</i></p>
 				<small>William Shakespeare, <cite title="Romeo a Julie">Romeo a Julie</cite></small>
 			</blockquote>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque tempor urna vitae congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec rutrum odio dictum lorem tincidunt tempus eleifend quam tincidunt. In at mauris dolor. Ut dapibus molestie varius. Morbi posuere, mauris ut congue cursus, nulla augue ultrices lorem, non ultrices neque tortor sed ligula. Suspendisse eu ipsum felis, at laoreet erat. Suspendisse quis lorem mauris. Vivamus vel dapibus lacus. Mauris sed convallis felis. Integer tellus neque, venenatis eget convallis sit amet, vulputate ac augue. Sed dui ante, pharetra sit amet condimentum at, congue eu tortor. Nullam non suscipit tellus. Mauris sollicitudin turpis porttitor dolor laoreet consectetur.</p>
+			<div class="row">
+				<div class="span6">
+					<img src="http://farm7.staticflickr.com/6084/6115492383_7cfa9c117d_q_d.jpg" class="pull-right img-polaroid" alt="Petra Kadlecová">
+					<h3>Petra Kadlecová</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque tempor urna vitae congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec rutrum odio dictum lorem tincidunt tempus eleifend quam tincidunt. In at mauris dolor. Ut dapibus molestie varius. Morbi posuere, mauris ut congue cursus, nulla augue ultrices lorem, non ultrices neque tortor sed ligula. Suspendisse eu ipsum felis, at laoreet erat. Suspendisse quis lorem mauris. Vivamus vel dapibus lacus. Mauris sed convallis felis. Integer tellus neque, venenatis eget convallis sit amet, vulputate ac augue. Sed dui ante, pharetra sit amet condimentum at, congue eu tortor. Nullam non suscipit tellus. Mauris sollicitudin turpis porttitor dolor laoreet consectetur.</p>
+				</div>
+				<div class="span6">
+					<img src="http://farm3.staticflickr.com/2301/2037223886_6b57b8c832_q_d.jpg" class="pull-right img-polaroid" alt="Jan Kaláb">
+					<h3>Jan Kaláb</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque tempor urna vitae congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec rutrum odio dictum lorem tincidunt tempus eleifend quam tincidunt. In at mauris dolor. Ut dapibus molestie varius. Morbi posuere, mauris ut congue cursus, nulla augue ultrices lorem, non ultrices neque tortor sed ligula. Suspendisse eu ipsum felis, at laoreet erat. Suspendisse quis lorem mauris. Vivamus vel dapibus lacus. Mauris sed convallis felis. Integer tellus neque, venenatis eget convallis sit amet, vulputate ac augue. Sed dui ante, pharetra sit amet condimentum at, congue eu tortor. Nullam non suscipit tellus. Mauris sollicitudin turpis porttitor dolor laoreet consectetur.</p>
+				</div>
+			</div>
 		</section>
 		<section id="kdyakde">
 			<div class="page-header"><h2>Kdy a kde</h2></div>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque tempor urna vitae congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec rutrum odio dictum lorem tincidunt tempus eleifend quam tincidunt. In at mauris dolor. Ut dapibus molestie varius. Morbi posuere, mauris ut congue cursus, nulla augue ultrices lorem, non ultrices neque tortor sed ligula. Suspendisse eu ipsum felis, at laoreet erat. Suspendisse quis lorem mauris. Vivamus vel dapibus lacus. Mauris sed convallis felis. Integer tellus neque, venenatis eget convallis sit amet, vulputate ac augue. Sed dui ante, pharetra sit amet condimentum at, congue eu tortor. Nullam non suscipit tellus. Mauris sollicitudin turpis porttitor dolor laoreet consectetur.</p>
+			<h3>Harmonogram</h3>
+			<dl class="dl-horizontal">
+				<dt>10.00</dt><dd>Obřad</dd>
+				<dt>11.30</dt><dd>Focení</dd>
+				<dt>13.00</dt><dd>Oběd</dd>
+				<dt>18.00</dt><dd>Kamarádi</dd>
+				<dt>23.00</dt><dd>Konec, manželské povinnosti ;)</dd>
+			</dl>
+			<div class="row">
+				<div class="span6">
+					<h3>Obřad</h3>
+					<address>
+						<strong><a href="http://zidenice.farnost.cz">Kostel svatého Cyrila a metoděje</a></strong><br>
+						Gajdošova<br>
+						Brno-Židenice
+					</address>
+					<a href="https://maps.google.cz/maps?cid=1637767603622920953" class="btn btn-primary">Mapa</a>
+					<a href="https://foursquare.com/v/4bf81ed8abdaef3b4aa0a184" class="btn btn-info">Foursquare</a>
+				</div>
+				<div class="span6">
+					<h3>Hostina</h3>
+					<address>
+						<strong><a href="http://www.delnickydumbrno.cz">Dělnický dům Židenice</a></strong><br>
+						Jamborova 3323/65<br>
+						Brno-Židenice
+					</address>
+					<a href="https://maps.google.cz/maps?cid=12645884124348330275" class="btn btn-primary">Mapa</a>
+					<a href="https://foursquare.com/v/4e174fc7d4c062b044dcd60e" class="btn btn-info">Foursquare</a>
+				</div>
+			</div>
 		</section>
 		<section id="hostina">
 			<div class="page-header"><h2>Hostina</h2></div>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque tempor urna vitae congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec rutrum odio dictum lorem tincidunt tempus eleifend quam tincidunt. In at mauris dolor. Ut dapibus molestie varius. Morbi posuere, mauris ut congue cursus, nulla augue ultrices lorem, non ultrices neque tortor sed ligula. Suspendisse eu ipsum felis, at laoreet erat. Suspendisse quis lorem mauris. Vivamus vel dapibus lacus. Mauris sed convallis felis. Integer tellus neque, venenatis eget convallis sit amet, vulputate ac augue. Sed dui ante, pharetra sit amet condimentum at, congue eu tortor. Nullam non suscipit tellus. Mauris sollicitudin turpis porttitor dolor laoreet consectetur.</p>
+			<h3>Oběd</h3>
+			<p>Oběd se bude podávat ve 13 hodin.</p>
+			<ul>
+				<li>Metropol</li>
+				<li>Nudlová polévka s játrovými knedlíčky</li>
+				<li>Šunková rolka</li>
+				<li>Svíčková na smetaně, houskový knedlík</li>
+			</ul>
+			<h3>Raut</h3>
+			<p>Vše co bude na stole jezte a pijte co hrdlo ráčí!</p>
+			<ul>
+				<li>Party řízečky</li>
+				<li>Pečivo</li>
+				<li>Víno</li>
+				<li>Juice</li>
+			</ul>
+			<div class="alert alert-block alert-info">
+				<h4>Pivo, káva</h4>
+				Pokud chcete pivo nebo kávu, kontaktujte styčného důstojníka Libora Kalába.
+			</div>
+			<div class="alert alert-error">Tvrdý alkohol si platíte sami!</div>
 		</section>
 		<section id="dary">
 			<div class="page-header"><h2>Dary</h2></div>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque tempor urna vitae congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec rutrum odio dictum lorem tincidunt tempus eleifend quam tincidunt. In at mauris dolor. Ut dapibus molestie varius. Morbi posuere, mauris ut congue cursus, nulla augue ultrices lorem, non ultrices neque tortor sed ligula. Suspendisse eu ipsum felis, at laoreet erat. Suspendisse quis lorem mauris. Vivamus vel dapibus lacus. Mauris sed convallis felis. Integer tellus neque, venenatis eget convallis sit amet, vulputate ac augue. Sed dui ante, pharetra sit amet condimentum at, congue eu tortor. Nullam non suscipit tellus. Mauris sollicitudin turpis porttitor dolor laoreet consectetur.</p>
+			<table class="table">
+				<thead>
+					<tr><th>Dar</th><th>Stav</th></tr>
+				</thead>
+				<tbody>
+					<tr><td>Mikrovlnka</td><td>Volno</td></tr>
+					<tr><td>Skleničky</td><td>Volno</td></tr>
+					<tr class="error"><td>Příbory</td><td>Rezervováno</td></tr>
+					<tr><td>Talíře</td><td>Volno</td></tr>
+					<tr><td>Postel</td><td>Volno</td></tr>
+					<tr class="error"><td>TV</td><td>Rezervováno</td></tr>
+				</tbody>
+			</table>
+			<p>Nic Vás nezaujalo? <a href="mailto:pitlicek@gmail.com?subject=Svatební dar">Navrhněte nám něco lepšího!</a> Ale ani tvrdé měně se nebráníme ;).</p>
 		</section>
 		<section id="download">
 			<div class="page-header"><h2>Ke stažení</h2></div>
