--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<div class="container">
 		<div class="alert">Stránka ještě není kompletní! Jděte jinam! ಠ_ಠ</div>
 		<div class="hero-unit" id="hero-unit">
-			<img src="http://farm9.staticflickr.com/8003/7465044124_b1c24ecf8f_q_d.jpg" class="pull-right img-circle hidden-phone" alt="Fotka">
+			<img src="//farm9.staticflickr.com/8003/7465044124_b1c24ecf8f_q_d.jpg" class="pull-right img-circle hidden-phone" alt="Fotka">
 			<h1>Pet&shy;ra Kad&shy;le&shy;co&shy;vá &amp; Jan Ka&shy;láb</h1>
 			<h2>10. 11. 2012</h2>
 			<p><a href="http://zidenice.farnost.cz">Kostel sv. Cyrila a&nbsp;Metoděje</a>, <a href="http://www.delnickydumbrno.cz">Dělnický dům Židenice</a></p>
@@ -57,12 +57,12 @@
 			</blockquote>
 			<div class="row">
 				<div class="span6">
-					<img src="http://farm7.staticflickr.com/6084/6115492383_7cfa9c117d_q_d.jpg" class="pull-right img-polaroid" alt="Petra Kadlecová">
+					<img src="//farm7.staticflickr.com/6084/6115492383_7cfa9c117d_q_d.jpg" class="pull-right img-polaroid" alt="Petra Kadlecová">
 					<h3>Pet&shy;ra Kad&shy;le&shy;co&shy;vá</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque tempor urna vitae congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec rutrum odio dictum lorem tincidunt tempus eleifend quam tincidunt. In at mauris dolor. Ut dapibus molestie varius. Morbi posuere, mauris ut congue cursus, nulla augue ultrices lorem, non ultrices neque tortor sed ligula. Suspendisse eu ipsum felis, at laoreet erat. Suspendisse quis lorem mauris. Vivamus vel dapibus lacus. Mauris sed convallis felis. Integer tellus neque, venenatis eget convallis sit amet, vulputate ac augue. Sed dui ante, pharetra sit amet condimentum at, congue eu tortor. Nullam non suscipit tellus. Mauris sollicitudin turpis porttitor dolor laoreet consectetur.</p>
 				</div>
 				<div class="span6">
-					<img src="http://farm3.staticflickr.com/2301/2037223886_6b57b8c832_q_d.jpg" class="pull-right img-polaroid" alt="Jan Kaláb">
+					<img src="img/pitel.png" class="pull-right img-polaroid" alt="Jan Kaláb">
 					<h3>Jan Ka&shy;láb</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque tempor urna vitae congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec rutrum odio dictum lorem tincidunt tempus eleifend quam tincidunt. In at mauris dolor. Ut dapibus molestie varius. Morbi posuere, mauris ut congue cursus, nulla augue ultrices lorem, non ultrices neque tortor sed ligula. Suspendisse eu ipsum felis, at laoreet erat. Suspendisse quis lorem mauris. Vivamus vel dapibus lacus. Mauris sed convallis felis. Integer tellus neque, venenatis eget convallis sit amet, vulputate ac augue. Sed dui ante, pharetra sit amet condimentum at, congue eu tortor. Nullam non suscipit tellus. Mauris sollicitudin turpis porttitor dolor laoreet consectetur.</p>
 				</div>
@@ -72,11 +72,12 @@
 			<div class="page-header"><h2>Kdy a kde</h2></div>
 			<h3>Harmonogram</h3>
 			<dl class="dl-horizontal">
-				<dt>10.00</dt><dd>Obřad</dd>
-				<dt>11.30</dt><dd>Focení</dd>
-				<dt>13.00</dt><dd>Oběd</dd>
+				<dt>10.00</dt><dd>Sraz na Škrochově 26</dd>
+				<dt>11.00</dt><dd>Obřad</dd>
+				<dt>12.30</dt><dd>Focení</dd>
+				<dt>14.00</dt><dd>Oběd</dd>
 				<dt>18.00</dt><dd>Kamarádi</dd>
-				<dt>23.00</dt><dd>Konec, manželské povinnosti ;)</dd>
+				<dt>23.00</dt><dd>Konec</dd>
 			</dl>
 			<div class="row">
 				<div class="span6">
@@ -150,7 +151,7 @@
 			</ul>
 		</section>
 	</div>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script>
 		$(function() {
