--- a/index.html
+++ b/index.html
@@ -48,12 +48,14 @@
 			<h2>10. 11. 2012</h2>
 			<p><a href="http://zidenice.farnost.cz">Kostel sv. Cyrila a&nbsp;Metoděje</a>, <a href="http://www.delnickydumbrno.cz">Dělnický dům Židenice</a></p>
 		</div>
-		<section id="svatba">
+		<section class="clearfix" id="svatba">
 			<div class="page-header"><h2>Svatba</h2></div>
-			<blockquote>
+			<blockquote class="pull-right" style="margin-left:20px">
 				<p><i>Čím víc jí dávám, tím víc jí mám.</i></p>
 				<small>William Shakespeare, <cite title="Romeo a Julie">Romeo a Julie</cite></small>
 			</blockquote>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque tempor urna vitae congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec rutrum odio dictum lorem tincidunt tempus eleifend quam tincidunt. In at mauris dolor. Ut dapibus molestie varius. Morbi posuere, mauris ut congue cursus, nulla augue ultrices lorem, non ultrices neque tortor sed ligula. Suspendisse eu ipsum felis, at laoreet erat. Suspendisse quis lorem mauris. Vivamus vel dapibus lacus. Mauris sed convallis felis. Integer tellus neque, venenatis eget convallis sit amet, vulputate ac augue. Sed dui ante, pharetra sit amet condimentum at, congue eu tortor. Nullam non suscipit tellus. Mauris sollicitudin turpis porttitor dolor laoreet consectetur.</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque tempor urna vitae congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec rutrum odio dictum lorem tincidunt tempus eleifend quam tincidunt. In at mauris dolor. Ut dapibus molestie varius. Morbi posuere, mauris ut congue cursus, nulla augue ultrices lorem, non ultrices neque tortor sed ligula. Suspendisse eu ipsum felis, at laoreet erat. Suspendisse quis lorem mauris. Vivamus vel dapibus lacus. Mauris sed convallis felis. Integer tellus neque, venenatis eget convallis sit amet, vulputate ac augue. Sed dui ante, pharetra sit amet condimentum at, congue eu tortor. Nullam non suscipit tellus. Mauris sollicitudin turpis porttitor dolor laoreet consectetur.</p>
 			<div class="row">
 				<div class="span6">
 					<img src="//farm7.staticflickr.com/6084/6115492383_7cfa9c117d_q_d.jpg" class="pull-right img-polaroid" alt="Petra Kadlecová">
@@ -67,15 +69,15 @@
 				</div>
 			</div>
 		</section>
-		<section id="kdyakde">
+		<section class="clearfix" id="kdyakde">
 			<div class="page-header"><h2>Kdy a kde</h2></div>
 			<h3>Harmonogram</h3>
 			<dl class="dl-horizontal">
 				<dt>10.00</dt><dd>Sraz na Škrochově 26</dd>
 				<dt>11.00</dt><dd>Obřad</dd>
 				<dt>12.30</dt><dd>Focení</dd>
-				<dt>13.30</dt><dd>Oběd</dd>
-				<dt>18.00</dt><dd>Kamarádi</dd>
+				<dt>13.30</dt><dd>Hostina</dd>
+				<dt>18.00</dt><dd>Oslava</dd>
 				<dt>23.00</dt><dd>Konec</dd>
 			</dl>
 			<div class="row">
@@ -86,8 +88,18 @@
 						Gajdošova<br>
 						Brno-Židenice
 					</address>
-					<a href="https://maps.google.cz/maps?cid=1637767603622920953" class="btn btn-primary">Mapa</a>
-					<a href="https://foursquare.com/v/4bf81ed8abdaef3b4aa0a184" class="btn btn-info">Foursquare</a>
+					<p class="btn-group">
+						<a href="https://maps.google.cz/maps?cid=1637767603622920953" class="btn btn-primary">Mapa</a>
+						<a href="https://foursquare.com/v/4bf81ed8abdaef3b4aa0a184" class="btn btn-info">Foursquare</a>
+						<a href="http://coord.info/GC1344X" class="btn btn-success">Geocache</a>
+					</p>
+					<div class="well well-small">
+						<h4>Mše pro nevěřící</h4>
+						<p>Mše se skládá ze dvou částí:<ol><li>Bohoslužba slova</li><li>Bohoslužba oběti</li></ol>Během mše se různě vstává, sedá a kleká, viz modrá poučka.</p>
+						<div class="alert alert-info"><em>když nevíte co dělat, dělejte to co ostatní.</em></div>
+						<p>V bohoslužbe slova Vás čekaji tři čtení z Bible (z toho první dvě jsou námi vybrané pasáže), modlitby a zpěvy.</p>
+						<p>Hlavním cílem bohoslužby oběti je <em>svaté přijímání</em>, při kterém si pokřtění jdou pro Kristovo tělo (hostie, oplatek) a krev (víno). <strong>Toto je jediná část, kdy neplatí modrá poučka!</strong> Pokud nejste pokřtění, zůstaňte prosím sedět, než vše skončí. Další drobnou specialitou je <em>pozdravení pokoje</em>. Při něm lidem ve svém okolí potřeste rukou se slovy: „Pokoj Vám.“ nebo „Pokoj Tobě.“, pokud to etiketa dovolí.</p>
+					</div>
 				</div>
 				<div class="span6">
 					<h3>Hostina</h3>
@@ -96,22 +108,30 @@
 						Jamborova 3323/65<br>
 						Brno-Židenice
 					</address>
-					<a href="https://maps.google.cz/maps?cid=12645884124348330275" class="btn btn-primary">Mapa</a>
-					<a href="https://foursquare.com/v/4e174fc7d4c062b044dcd60e" class="btn btn-info">Foursquare</a>
+					<p class="btn-group">
+						<a href="https://maps.google.cz/maps?cid=12645884124348330275" class="btn btn-primary">Mapa</a>
+						<a href="https://foursquare.com/v/4e174fc7d4c062b044dcd60e" class="btn btn-info">Foursquare</a>
+						<a href="http://coord.info/GC32WEA" class="btn btn-success">Geocache</a>
+					</p>
+					<div class="well well-small">
+						<h4>Focení</h4>
+						<p>Budeme moc rádi, když budete hojně fotit. Vaše zdařilé výtvory nám potom prosím <a href="mailto:pitlicek@gmail.com?subject=Fotky">pošlete</a> a my je zde vystavíme.</p>
+					</div>
 				</div>
 			</div>
 		</section>
-		<section id="dary">
+		<section class="clearfix" id="dary">
 			<div class="page-header"><h2>Dary</h2></div>
+			<div class="alert alert-success">Dostaneme od Vás něco do výbavy? <a href="mailto:pitlicek@gmail.com?subject=Svatební dar">Napište nám</a>, ať je tabulka níže aktuální, a nedostáváme 42 sad přiborů :).</div>
 			<table class="table" id="gifts">
 				<thead>
 					<tr><th>Dar</th><th>Stav</th></tr>
 				</thead>
-				<tbody></tbody>
+				<tbody><!-- Filled with JS --></tbody>
 			</table>
 			<p>Nic Vás nezaujalo? <a href="mailto:pitlicek@gmail.com?subject=Svatební dar">Navrhněte nám něco lepšího!</a> Ale ani tvrdé měně se nebráníme ;).</p>
 		</section>
-		<section id="download">
+		<section class="clearfix" id="download">
 			<div class="page-header"><h2>Ke stažení</h2></div>
 			<ul>
 				<li><a href="https://www.dropbox.com/s/rlmf5uglcy0picu/zasnoubeni.zip" rel="tooltip" title="Karta, se kterou byla Petra požádána o&nbsp;ruku">Zasnoubení</a></li>
