Oprava textu o msi

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		</div>
 	</div>
 	<div class="container">
-		<div class="alert">Stránka ještě není kompletní! Jděte jinam! ಠ_ಠ</div>
+		<div class="alert">Stránka ještě není kompletní!</div>
 		<div class="hero-unit" id="hero-unit">
 			<img src="//farm9.staticflickr.com/8003/7465044124_b1c24ecf8f_q_d.jpg" class="pull-right img-circle hidden-phone" alt="Fotka">
 			<h1>Pet&shy;ra Kad&shy;le&shy;co&shy;vá &amp; Jan Ka&shy;láb</h1>
@@ -97,8 +97,8 @@
 						<h4>Mše pro nevěřící</h4>
 						<p>Mše se skládá ze dvou částí:<ol><li>Bohoslužba slova</li><li>Bohoslužba oběti</li></ol>Během mše se různě vstává, sedá a kleká, viz modrá poučka.</p>
 						<div class="alert alert-info"><em>když nevíte co dělat, dělejte to co ostatní.</em></div>
-						<p>V bohoslužbe slova Vás čekaji tři čtení z Bible (z toho první dvě jsou námi vybrané pasáže), modlitby a zpěvy.</p>
-						<p>Hlavním cílem bohoslužby oběti je <em>svaté přijímání</em>, při kterém si pokřtění jdou pro Kristovo tělo (hostie, oplatek) a krev (víno). <strong>Toto je jediná část, kdy neplatí modrá poučka!</strong> Pokud nejste pokřtění, zůstaňte prosím sedět, než vše skončí. Další drobnou specialitou je <em>pozdravení pokoje</em>. Při něm lidem ve svém okolí potřeste rukou se slovy: „Pokoj Vám.“ nebo „Pokoj Tobě.“, pokud to etiketa dovolí.</p>
+						<p>V bohoslužbe slova Vás čekají dvě čtení a evangelium (vše jsou to námi vybrané úryvky z Bible), modlitby a zpěvy.</p>
+						<p>Vrcholem bohoslužby oběti je <em>svaté přijímání</em>, při kterém si pokřtění jdou pro Kristovo tělo (hostie, oplatek) a krev (víno). <strong>Toto je jediná část, kdy neplatí modrá poučka!</strong> Pokud nejste pokřtění, zůstaňte prosím sedět, než vše skončí. Další drobnou specialitou je <em>pozdravení pokoje</em>. Při něm lidem ve svém okolí potřeste rukou se slovy: „Pokoj Vám.“ nebo „Pokoj Tobě.“, pokud to etiketa dovolí.</p>
 					</div>
 				</div>
 				<div class="span6">
