--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 		</section>
 		<section class="clearfix" id="dary">
 			<div class="page-header"><h2>Dary</h2></div>
-			<div class="alert alert-success">Dostaneme od Vás něco do výbavy? <a href="mailto:pitlicek@gmail.com?subject=Svatební dar">Napište nám</a>, ať je tabulka níže aktuální, a nedostáváme 42 sad přiborů :).</div>
+			<div class="alert alert-success">Dostaneme od Vás něco do výbavy? <a href="mailto:kalabovatereza@gmail.com?subject=Svatební dar">Napište nám</a>, ať je tabulka níže aktuální, a nedostáváme 42 sad přiborů :).</div>
 			<table class="table" id="gifts">
 				<thead>
 					<tr><th>Dar</th><th>Stav</th></tr>
