--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 				</thead>
 				<tbody><!-- Filled with JS --></tbody>
 			</table>
-			<p>Nic Vás nezaujalo? <a href="mailto:pitlicek@gmail.com?subject=Svatební dar">Navrhněte nám něco lepšího!</a> Ale ani tvrdé měně se nebráníme ;).</p>
+			<p>Nic Vás nezaujalo? <a href="mailto:kalabovatereza@gmail.com?subject=Návrh svatebního daru">Navrhněte nám něco lepšího!</a> Ale ani tvrdé měně se nebráníme ;).</p>
 		</section>
 		<section class="clearfix" id="download">
 			<div class="page-header"><h2>Ke stažení</h2></div>
