--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					<div class="well well-small">
 						<h4>Mše pro nevěřící</h4>
 						<p>Mše se skládá ze dvou částí:<ol><li>Bohoslužba slova</li><li>Bohoslužba oběti</li></ol>Během mše se různě vstává, sedá a kleká, viz modrá poučka.</p>
-						<div class="alert alert-info"><em>když nevíte co dělat, dělejte to co ostatní.</em></div>
+						<div class="alert alert-info"><em>Když nevíte co dělat, dělejte to co ostatní.</em></div>
 						<p>V bohoslužbe slova Vás čekají dvě čtení a evangelium (vše jsou to námi vybrané úryvky z Bible), modlitby a zpěvy.</p>
 						<p>Vrcholem bohoslužby oběti je <em>svaté přijímání</em>, při kterém si pokřtění jdou pro Kristovo tělo (hostie, oplatek) a krev (víno). <strong>Toto je jediná část, kdy neplatí modrá poučka!</strong> Pokud nejste pokřtění, zůstaňte prosím sedět, než vše skončí. Další drobnou specialitou je <em>pozdravení pokoje</em>. Při něm lidem ve svém okolí potřeste rukou se slovy: „Pokoj Vám.“ nebo „Pokoj Tobě.“, pokud to etiketa dovolí.</p>
 					</div>
@@ -116,6 +116,8 @@
 					<div class="well well-small">
 						<h4>Focení</h4>
 						<p>Budeme moc rádi, když budete hojně fotit. Vaše zdařilé výtvory nám potom prosím <a href="mailto:pitlicek@gmail.com?subject=Fotky">pošlete</a> a my je zde vystavíme.</p>
+						<h4>Víno, pivo, rum</h4>
+						<p>Jelikož my i naše okolí máme radší víno než pivo, tak i na hostině máme připraveno mnohem víc vína. Pivo tam bude, ale když dojde, není to vina hospody :-). Tvrdý alkohol jsme nepřipravili vůbec, pořád hrozí návrat prohobice :-).</p>
 					</div>
 				</div>
 			</div>
