--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		}
 		p {text-align: justify}
 		.img-polaroid.pull-right {margin-left: 10px;}
+		.medailon {text-align: justify;}
 	</style>
 	<link href="css/bootstrap-responsive.min.css" rel="stylesheet">
 </head>
@@ -41,7 +42,6 @@
 		</div>
 	</div>
 	<div class="container">
-		<div class="alert">Stránka ještě není kompletní!</div>
 		<div class="hero-unit" id="hero-unit">
 			<img src="//farm9.staticflickr.com/8003/7465044124_b1c24ecf8f_q_d.jpg" class="pull-right img-circle hidden-phone" alt="Fotka">
 			<h1>Pet&shy;ra Kad&shy;le&shy;co&shy;vá &amp; Jan Ka&shy;láb</h1>
@@ -56,16 +56,48 @@
 			</blockquote>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque tempor urna vitae congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec rutrum odio dictum lorem tincidunt tempus eleifend quam tincidunt. In at mauris dolor. Ut dapibus molestie varius. Morbi posuere, mauris ut congue cursus, nulla augue ultrices lorem, non ultrices neque tortor sed ligula. Suspendisse eu ipsum felis, at laoreet erat. Suspendisse quis lorem mauris. Vivamus vel dapibus lacus. Mauris sed convallis felis. Integer tellus neque, venenatis eget convallis sit amet, vulputate ac augue. Sed dui ante, pharetra sit amet condimentum at, congue eu tortor. Nullam non suscipit tellus. Mauris sollicitudin turpis porttitor dolor laoreet consectetur.</p>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque tempor urna vitae congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec rutrum odio dictum lorem tincidunt tempus eleifend quam tincidunt. In at mauris dolor. Ut dapibus molestie varius. Morbi posuere, mauris ut congue cursus, nulla augue ultrices lorem, non ultrices neque tortor sed ligula. Suspendisse eu ipsum felis, at laoreet erat. Suspendisse quis lorem mauris. Vivamus vel dapibus lacus. Mauris sed convallis felis. Integer tellus neque, venenatis eget convallis sit amet, vulputate ac augue. Sed dui ante, pharetra sit amet condimentum at, congue eu tortor. Nullam non suscipit tellus. Mauris sollicitudin turpis porttitor dolor laoreet consectetur.</p>
-			<div class="row">
+			<div class="row medailon">
 				<div class="span6">
 					<img src="//farm7.staticflickr.com/6084/6115492383_7cfa9c117d_q_d.jpg" class="pull-right img-polaroid" alt="Petra Kadlecová">
 					<h3>Pet&shy;ra Kad&shy;le&shy;co&shy;vá</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque tempor urna vitae congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec rutrum odio dictum lorem tincidunt tempus eleifend quam tincidunt. In at mauris dolor. Ut dapibus molestie varius. Morbi posuere, mauris ut congue cursus, nulla augue ultrices lorem, non ultrices neque tortor sed ligula. Suspendisse eu ipsum felis, at laoreet erat. Suspendisse quis lorem mauris. Vivamus vel dapibus lacus. Mauris sed convallis felis. Integer tellus neque, venenatis eget convallis sit amet, vulputate ac augue. Sed dui ante, pharetra sit amet condimentum at, congue eu tortor. Nullam non suscipit tellus. Mauris sollicitudin turpis porttitor dolor laoreet consectetur.</p>
+					<dl>
+						<dt>Oblíbený citát?</dt><dd>Když už člověk jednou je, tak má koukat aby byl a&nbsp;když kouká aby byl, a&nbsp;je, tak má být to, co je a&nbsp;nemá být to, co není, jak tomu v&nbsp;mnoha případech je.</dd>
+						<dt>Když padá v lese strom a všude okolo není živáčka, který by to slyšel, je slyšet zvuk?</dt><dd>Zombie elf ho jistě slyší.</dd>
+						<dt>Proč prádlo na šňůře schne, i když mrzne?</dt><dd>Proč by neschlo, když se mu chce? Ještě prádlu do toho budu kecat…</dd>
+						<dt>Co je nejbělejší na světě?</dt><dd>Třpyt.</dd>
+						<dt>Bez které barvy by neexistovala duha?</dt><dd>Bez pruhované.</dd>
+						<dt>Jak byste zajistili světový mír, kdybyste měli neomezené možnosti?</dt><dd>Zrušila bych veškeré kopie systému Windows a je mi jedno, co by to způsobilo.</dd>
+						<dt>Jak byste zastavili globální oteplování?</dt><dd>Vysadila bych zelené rostliny úplně všude kromě svého bytu.</dd>
+						<dt>Kolik kilogramů váží opravdu velký mrak?</dt><dd>Tolik, jako 2 opravdu velké mraky děleno 2.</dd>
+						<dt>Co dělá slunce, když zrovna nesvítí?</dt><dd>Svítí pořád, svítí jinam.</dd>
+						<dt>Kdo přikládá pod kotel v sopce?</dt><dd>Skřítci pomocníčci.</dd>
+						<dt>Žije <a href="https://cs.wikipedia.org/wiki/Schr%C3%B6dingerova_ko%C4%8Dka">Schrödingerova kočka</a>?</dt><dd>Ano.</dd>
+						<dt>Jakou zbraň byste použili proti zombie?</dt><dd>Ohnivé kouzlo.</dd>
+						<dt>Jak byste svou nastávající polovičku ochránili proti komárům?</dt><dd>Tím do zásuvky.</dd>
+						<dt>A jak proti upírům?</dt><dd>Čajem</dd>
+						<dt>Jakým způsobem je možné odemknout nezamčené dveře?</dt><dd>Vezmu klíč, zamknu, odemknu, a jdu dál.</dd>
+					</dl>
 				</div>
 				<div class="span6">
 					<img src="img/pitel.png" class="pull-right img-polaroid" alt="Jan Kaláb">
 					<h3>Jan Ka&shy;láb</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean pellentesque tempor urna vitae congue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec rutrum odio dictum lorem tincidunt tempus eleifend quam tincidunt. In at mauris dolor. Ut dapibus molestie varius. Morbi posuere, mauris ut congue cursus, nulla augue ultrices lorem, non ultrices neque tortor sed ligula. Suspendisse eu ipsum felis, at laoreet erat. Suspendisse quis lorem mauris. Vivamus vel dapibus lacus. Mauris sed convallis felis. Integer tellus neque, venenatis eget convallis sit amet, vulputate ac augue. Sed dui ante, pharetra sit amet condimentum at, congue eu tortor. Nullam non suscipit tellus. Mauris sollicitudin turpis porttitor dolor laoreet consectetur.</p>
+					<dl>
+						<dt>Oblíbený citát?</dt><dd>Rozum a chtíč nemohou být v opozici natrvalo!</dd>
+						<dt>Když padá v lese strom a všude okolo není živáčka, který by to slyšel, je slyšet zvuk?</dt><dd>Ne.</dd>
+						<dt>Proč prádlo na šňůře schne, i když mrzne?</dt><dd>Ono fakt schne?</dd>
+						<dt>Co je nejbělejší na světě?</dt><dd><code>0xffffff</code></dd>
+						<dt>Bez které barvy by neexistovala duha?</dt><dd>Žluté.</dd>
+						<dt>Jak byste zajistili světový mír, kdybyste měli neomezené možnosti?</dt><dd>Lobotomií některých lidí.</dd>
+						<dt>Jak byste zastavili globální oteplování?</dt><dd>Ledem.</dd>
+						<dt>Kolik kilogramů váží opravdu velký mrak?</dt><dd>42 metráků.</dd>
+						<dt>Co dělá slunce, když zrovna nesvítí?</dt><dd>Černé díry.</dd>
+						<dt>Kdo přikládá pod kotel v sopce?</dt><dd>Dinosauři.</dd>
+						<dt>Žije <a href="https://cs.wikipedia.org/wiki/Schr%C3%B6dingerova_ko%C4%8Dka">Schrödingerova kočka</a>?</dt><dd>Jak kdy.</dd>
+						<dt>Jakou zbraň byste použili proti zombie?</dt><dd>Motorové pily připevněné na obou stranách oboustranného pádla nebo světelný meč.</dd>
+						<dt>Jak byste svou nastávající polovičku ochránili proti komárům?</dt><dd>Repelentem.</dd>
+						<dt>A jak proti upírům?</dt><dd>Česnekem</dd>
+						<dt>Jakým způsobem je možné odemknout nezamčené dveře?</dt><dd>Kopem s otočkou.</dd>
+					</dl>
 				</div>
 			</div>
 		</section>
