--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 						<dt>Žije <a href="https://cs.wikipedia.org/wiki/Schr%C3%B6dingerova_ko%C4%8Dka">Schrödingerova kočka</a>?</dt><dd>Jak kdy.</dd>
 						<dt>Jakou zbraň byste použili proti zombie?</dt><dd>Motorové pily připevněné na obou stranách oboustranného pádla nebo světelný meč.</dd>
 						<dt>Jak byste svou nastávající polovičku ochránili proti komárům?</dt><dd>Repelentem.</dd>
-						<dt>A jak proti upírům?</dt><dd>Česnekem</dd>
+						<dt>A jak proti upírům?</dt><dd>Česnekem.</dd>
 						<dt>Jakým způsobem je možné odemknout nezamčené dveře?</dt><dd>Kopem s otočkou.</dd>
 					</dl>
 				</div>
