--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 						<h4>Focení</h4>
 						<p>Budeme moc rádi, když budete hojně fotit. Vaše zdařilé výtvory nám potom prosím <a href="mailto:pitlicek@gmail.com?subject=Fotky">pošlete</a> a my je zde vystavíme.</p>
 						<h4>Víno, pivo, rum</h4>
-						<p>Jelikož my i naše okolí máme radší víno než pivo, tak i na hostině máme připraveno mnohem víc vína. Pivo tam bude, ale když dojde, není to vina hospody :-). Tvrdý alkohol jsme nepřipravili vůbec, pořád hrozí návrat prohobice :-).</p>
+						<p>Jelikož my i naše okolí máme radší víno než pivo, tak i na hostině máme připraveno mnohem víc vína. Pivo tam bude, ale když dojde, není to vina hospody :-). Tvrdý alkohol jsme nepřipravili vůbec, pořád hrozí návrat prohibice :-).</p>
 					</div>
 				</div>
 			</div>
